[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5.4"
actix-web = "3.3.2"
actix-web-httpauth = "0.5.1"
bcrypt = "0.10.1"
chrono = {version="0.4", features=["serde"]}
derive_more = "0.99.16"
diesel = {version="1.4.8", features= ["mysql","uuidv07", "r2d2","chrono"]}
dotenv = "0.15.0"
env_logger = "0.9.0"
jsonwebtoken = "7.2.0"
r2d2 = "0.8.9"
serde = {version="1.0", features= ["derive"]}
serde_json = "1.0.68"