[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = "0.19.3"
yew-router = "0.16"
web-sys = {version = "0.3.7", features = ["HtmlFormElement"] }
wasm-bindgen = "0.2.79"
gloo-events = "0.1.1"
js-sys = "0.3.55"
yew-hooks = "0.1.31"
