[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = "0.19.3"
yew-router = "0.16"
web-sys = {version = "0.3.7", features = ["HtmlFormElement","HtmlCanvasElement", "HtmlImageElement", "HtmlDivElement", "Element", "File", "FileList", "FormData", "Blob", "Request", "RequestInit", "RequestMode", "Response", "Headers", "HtmlOptionsCollection", "HtmlSelectElement", "HtmlOptionElement", "Location", "ScrollToOptions", "HtmlTextAreaElement"] }
wasm-bindgen = "0.2.79"
gloo-events = "0.1.1"
js-sys = "0.3.55"
yew-hooks = "0.1.31"
serde = "1.0.136"
yew-interop = {git="https://github.com/Madoshakalaka/yew-interop.git", branch="master", features=["yew-stable"]}
log = "0.4.6"
wasm-logger = "0.2.0"
reqwest = { version = "0.11.7", features = ["json", "multipart"] }
getrandom = { version = "0.2", features = ["js"] } 
dotenv_codegen = "0.15.0"
gloo = "0.6.0"
lazy_static = "1.4.0"
parking_lot = "0.12.0"
thiserror = "1.0.30"
multipart = "0.18.0"
wasm-bindgen-futures = "0.4.29"
serde_json = "1.0.59"
gloo-utils = "0.1.2"
chrono = "0.4.19"
